YAML/voting-ingress-azure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votingapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: vote.engazure.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: 80
  - host: result.engazure.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: result
          servicePort: 80

#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: votinapp
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: vote.engazure.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: result.engazure.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
